Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133208

warning C4996: 'QSortFilterProxyModel::invalidateFilter': Use begin/endFilterChange() instead

    XMLWordPrintable

Details

    • Windows
    • 441ed024a (dev), c72d3c809 (6.9)

    Description

      qtapplicationmanager\src\intent-server-lib\intentmodel.cpp(176): error C2220: the following warning is treated as an error
      C:\Users\qt\work\qt\qtapplicationmanager\src\intent-server-lib\intentmodel.cpp(176): warning C4996: 'QSortFilterProxyModel::invalidateFilter': Use begin/endFilterChange() instead
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/c549fae32023566b54a3f301c225d95b66bf3015/WindowsWindows_11_23H2x86_64WindowsWindows_11_23H2x86_64MSVC2022qtci-windows-11_23H2-x86_64-54-0168bcDebugAndRelease_PinCores_Sccache_StandaloneExamples_UseConfigure_WarningsAreErrors/3cfa105f84337463d533121e264063fb4b7c0f0a/build_1737679245/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1737679217

      Tested changes (refs/builds/qtci/dev/1737678173):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/619662/2 Update dependencies on 'dev' in qt/qtapplicationmanager

      Attachments

        For Gerrit Dashboard: QTBUG-133208
        # Subject Branch Project Status CR V

        Activity

          People

            zogera Zoltán Gera
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes