Fix deprecation of filter model invalidation

Fixes: QTBUG-133208
Change-Id: I4f25ef3ae0804d11fa7ad4165f66117236b599db
Reviewed-by: Robert Griebl <robert.griebl@qt.io>
(cherry picked from commit 441ed024a2ae11ffeef309c5ee4429be0c5fe760)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>