src/intent-server-lib/intentmodel.cpp
@@ -171,9 +171,16 @@ QJSValue IntentModel::filterFunction() const
 void IntentModel::setFilterFunction(const QJSValue &callback)
 {
     if (!callback.equals(d->m_filterFunction)) {
+#if (QT_VERSION >= QT_VERSION_CHECK(6, 10, 0))
+        beginFilterChange();
+#endif
         d->m_filterFunction = callback;
         emit filterFunctionChanged();
+#if (QT_VERSION >= QT_VERSION_CHECK(6, 10, 0))
+        endFilterChange();
+#else
         invalidateFilter();
+#endif
     }
 }
 
